--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* Task: Add basic styles for body, header, main, and footer */
 body {
     font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
 }
-
-.wrapper {}
 
 header,
 footer {
@@ -20,7 +20,6 @@ footer {
 
 footer {
     position: fixed;
-    left: 0;
     bottom: 0;
     width: 100%;
     color: black;
@@ -32,14 +31,5 @@ img {
     text-align: center;
 }
 
-/* header {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    background-color: turquoise;
-    color: black;
-    text-align: center;
-} */
 
 /* Task: Extend these styles to improve layout and responsiveness */
